2016-02-11	Ad astra per alas porci.  (4)

		include/biting-pear/omg.h :
		- now uses only `bx' and `blx' in ARM code when compiling
		  for the appropriate platforms

2016-02-10	Ad astra per alas porci.  (3)

		include/biting-pear/kthxbai.h :
		- added arplw instruction for x86-32

		include/biting-pear/omg.h :
		- fixed mov %cs, ... assembly glitch for x86-32

		GNUmakefile :
		- fixed glitch in compiling bin/biting-pear-doge.ccc

2016-02-09	Ad astra per alas porci.  (2)

		bin/biting-pear-doge.ccc ,
		GNUmakefile ,
		.gitignore :
		- share/biting-pear/doge.ccc -> bin/biting-pear-doge.ccc

2016-02-08	Ad astra per alas porci.

		share/biting-pear/doge.ccc :
		- now requires a `seed' argument

2016-02-04	License change.  Indirect jumps, continued.

		include/biting-pear/omg.h :
		- try to move %cs read further away from its use

		test/test-extra-3.ccc :
		- now creates several "Hello, world!" strings to stress-test
		  the scrambling

		test/test-extra-3.good :
		- updated

		LICENSE :
		- changed to the GNU GPL v3, for releases from here on

2016-02-03	Yet another type of indirect jump.

		include/biting-pear/omg.h :
		- added far returns

2016-01-31	A bit more refactoring.

		share/biting-pear/calm.ccc :
		- restructured code for invoking cc1plus and echoing command
		  line arguments

2016-01-27	Slightly better documentation.

		README.md :
		- added some installation instructions

2016-01-24	A bit of refactoring.

		GNUmakefile ,
		bin/biting-pear-c++.ccc ,
		share/biting-pear/calm.ccc :
		- factored out shocked(.) and curious(...) to share/biting-
		  pear/epic.cc

		share/biting-pear/epic.cc :
		- initial version; split from share/biting-pear/calm.ccc

2016-01-23	Nice wrapper.

		.gitignore :
		- added *.ii and calm, removed nomnom

		GNUmakefile :
		- updated to build and use wrapper
		- now preprocesses to .ii files instead of .i files
		- now builds internal passes from share/biting-pear/ rather
		  than libexec/biting-pear/